--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene xr-mode-ui="XRMode:xr">
       
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-box position="-1 0.5 4" rotation="0 45 0" color="#green"></a-box>
@@ -11,7 +11,7 @@
       <a-sphere position="-2 1  5" radius="1.25" color="#4CC3D9"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky hide-on-enter-ar color="#ECECEC"></a-sky>
     </a-scene>
   </body>
 </html>
