--- a/figuras.html
+++ b/figuras.html
@@ -51,6 +51,10 @@
       <a-entity position="0.3 0.85 -0.5"
           geometry="primitive: cylinder; radius: 0.15; height: 0.2;"
           material="opacity: 0.2; color: green" grabbable>
+
+      <a-entity position="0.5 0.8 -0.6"
+          geometry="primitive: cylinder; radius: 0.15; height: 0.2;"
+          material="opacity: 0.2; color: pink" grabbable>
       </a-entity>
 
       <a-entity position="0.6 0.85 -0.5"
