--- a/figuras.html
+++ b/figuras.html
@@ -30,7 +30,7 @@
       </a-assets>
 
       <a-plane id="plane" position="0 0.75 -0.5" rotation="-90 0 0" width="1" height="0.6"
-          color="dark blue">
+          color="blue">
       </a-plane>
 
       <a-entity position="-0.5 0.85 -0.5"
