--- a/habitación.html
+++ b/habitación.html
@@ -6,6 +6,7 @@
     <a-scene>
     <a-box position="0 1 -1" height="2" width="2"  depth="0.1" color="#4CC3D9"></a-box>
     <a-box position="0 1  1" height="2" width="2"  depth="0.1" color="#green"></a-box>
+    <a-box position="0 1  1" height="2" width="2"  depth="0.1" color="#pink"></a-box>
     
          
           </a-scene>
