--- a/habitación.html
+++ b/habitación.html
@@ -8,7 +8,7 @@
     <a-box position="0 1  1" height="2" width="2"  depth="0.1" color="green"></a-box>
     <a-box position="1 1  0" height="2" width="2"  depth="0.1" rotation= "0 90 1" color="black"></a-box>
     <a-box position="-1 1 0" height="2" width="2"  depth="0.1" rotation= "0 -90 1" color="pink"></a-box>
-    <a-box rotation="0 360 0" position="0 0 0" animation="property: position; to: 1 8 -10; dur: 5000; easing: linear; loop: true; dir: alternate" color="tomato"></a-box>  
+    <a-box position="0 0 0" animation="property: rotation; to: 0 360 0; dur: 5000; easing: linear; loop: true; dir: alternate" color="tomato"></a-box>  
   
 </a-entity>
     </a-scene>
