--- a/habitación.html
+++ b/habitación.html
@@ -4,7 +4,8 @@
   </head>
   <body>
     <a-scene>
-    <a-box position="0 1 -1" height="2" width="2"  depth="0.1" color="#4CC3D9"></a-box>
+    <a-plane position="0 0 0" rotation="-90 0 0" width="4" height="4" color="black"
+      <a-box position="0 1 -1" height="2" width="2"  depth="0.1" color="#4CC3D9"></a-box>
     <a-box position="0 1  1" height="2" width="2"  depth="0.1" color="green"></a-box>
     <a-box position="1 1  0" height="2" width="2"  depth="0.1" rotation= "0 90 1" color="black"></a-box>
     <a-box position="-1 1 0" height="2" width="2"  depth="0.1" rotation= "0 -90 1" color="pink"></a-box>
