--- a/habitación.html
+++ b/habitación.html
@@ -5,7 +5,7 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="suelo1" src="suelo1.jpg"
+        <img id="suelo1" src="suelo1.jpg">
            ></a-assets>
 
       <a-box position="0 1 -1" height="2" width="2"  depth="0.1" color="#4CC3D9"></a-box>
