--- a/habitación.html
+++ b/habitación.html
@@ -5,7 +5,7 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="suelo1" src="suelo1.jpg">
+        <img id="maderagris" src="maderagris.jpg">
            ></a-assets>
       <img id="paredmoderna"  src="paredmoderna.jpg">
 
@@ -16,7 +16,7 @@
     <a-box position="0 0 0" animation="property: rotation; to: 0 360 0; dur: 5000; easing: linear; loop: true; dir: alternate" color="tomato"  
     animation__2="property: position; to: 0 5 0; dur: 2000; loop: true; dir:alternate" 
     color= "tomato"></a-box> 
-    <a-plane position="0 0 0" rotation="-90 0 0" width="2" height="2" src="suelo1.jpg" ></a-plane>
+    <a-plane position="0 0 0" rotation="-90 0 0" width="2" height="2" src="maderagris.jpg" ></a-plane>
 
     </a-scene>
   </body>
