--- a/habitación.html
+++ b/habitación.html
@@ -7,12 +7,12 @@
       <a-assets>
         <img id="maderagris" src="maderagris.jpg">
            ></a-assets>
-      <img id="paredmoderna"  src="paredmoderna.jpg">
+      <img id="paredbonita"  src="paredbonita.jpg">
 
-      <a-box position="0 1 -1" height="2" width="2"  depth="0.1" src="paredmoderna.jpg"></a-box>
-    <a-box position="0 1  1" height="2" width="2"  depth="0.1" src="paredmoderna.jpg"></a-box>
-    <a-box position="1 1  0" height="2" width="2"  depth="0.1" rotation= "0 90 1" src="paredmoderna.jpg"></a-box>
-    <a-box position="-1 1 0" height="2" width="2"  depth="0.1" rotation= "0 -90 1" src="paredmoderna.jpg""></a-box>
+      <a-box position="0 1 -1" height="2" width="2"  depth="0.1" src="paredbonita.jpg"></a-box>
+    <a-box position="0 1  1" height="2" width="2"  depth="0.1" src="paredbonita.jpg"></a-box>
+    <a-box position="1 1  0" height="2" width="2"  depth="0.1" rotation= "0 90 1" src="paredbonita.jpg"></a-box>
+    <a-box position="-1 1 0" height="2" width="2"  depth="0.1" rotation= "0 -90 1" src="paredbonita.jpg""></a-box>
     <a-box position="0 0 0" animation="property: rotation; to: 0 360 0; dur: 5000; easing: linear; loop: true; dir: alternate" color="tomato"  
     animation__2="property: position; to: 0 5 0; dur: 2000; loop: true; dir:alternate" 
     color= "tomato"></a-box> 
